# MMRT_SIM

./: .gitignore
firmware/RAD/release/Core/Inc/: can.h  main.h
firmware/RAD/release/Core/Src/: can.c  main.c
ros_ws/src/: .gitignore  AUTONOMY_ARCHITECTURE.md  AUTONOMY_QUICK_START.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  INDEX.md
ros_ws/src/ORBSLAM3_SETUP_DOCS/: 01_ORBSLAM3_Local_Setup.md  02_Simulation_ORBSLAM3_Communication.md  03_Launch_ORBSLAM3_and_Topic_Mapping.md  04_Maxwell_Autonomy_Pipeline.md  ORBSLAM3_Setup.md
ros_ws/src/arm_controller/controller/include/arm_controller/: arm_controller.hpp
ros_ws/src/arm_moveit_config/: package.xml
ros_ws/src/arm_moveit_config/config/: arm.urdf.xacro
ros_ws/src/arm_moveit_config/launch/: view.launch.py
ros_ws/src/arm_robot_description/: CMakeLists.txt  README.md  package.xml
ros_ws/src/arm_robot_description/config/: urdf.rviz
ros_ws/src/arm_robot_description/urdf/: arm.urdf
ros_ws/src/custom_interfaces/msg/: RadStatus.msg
ros_ws/src/drive/drive/: model.py  xbox_drive.py  xbox_drive.py.backup
ros_ws/src/maxwell_description/: CMakeLists.txt  README.md  SOLIDWORKS_TO_URDF.md  package.xml
ros_ws/src/maxwell_description/config/: joint_names_PROPER_Simplified Rover.SLDASM.yaml
ros_ws/src/maxwell_description/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
ros_ws/src/maxwell_description/urdf/: PROPER_Simplified Rover.SLDASM.csv  PROPER_Simplified Rover.SLDASM.urdf  maxwell_rviz.urdf
ros_ws/src/maxwell_gazebo/: GAZEBO_INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  SUMMARY.md  WORLDS_QUICKSTART.md  flowchart.md  package.xml  setup.cfg  setup.py
ros_ws/src/maxwell_gazebo/config/: maxwell_sim_rviz2_setup.rviz  swerve_controllers.yaml
ros_ws/src/maxwell_gazebo/launch/: maxwell_autonomy_sim.launch.py  maxwell_sim.launch.py
ros_ws/src/maxwell_gazebo/maxwell_gazebo/: __init__.py  swerve_sim_bridge.py
ros_ws/src/maxwell_gazebo/models/marsyard2020_terrain/: model.sdf
ros_ws/src/maxwell_gazebo/models/marsyard2021_terrain/: model.sdf
ros_ws/src/maxwell_gazebo/models/marsyard2022_terrain/: model.sdf
ros_ws/src/maxwell_gazebo/resource/: maxwell_gazebo
ros_ws/src/maxwell_gazebo/urdf/: maxwell_swerve.urdf  maxwell_swerve.urdf.bak
ros_ws/src/maxwell_gazebo/worlds/: marsyard2020.world
ros_ws/src/maxwell_localization/: package.xml  setup.cfg  setup.py
ros_ws/src/maxwell_localization/config/: ekf_localization.yaml  maxwell_localization_rviz2.rviz
ros_ws/src/maxwell_localization/launch/: maxwell_localization.launch.py
ros_ws/src/maxwell_localization/maxwell_localization/: slam_pose_bridge.py  wheel_odometry.py
ros_ws/src/maxwell_navigation/: package.xml  setup.cfg  setup.py
ros_ws/src/maxwell_navigation/config/: maxwell_navigation_rviz2.rviz  nav2_controllers.yaml  nav2_params.yaml
ros_ws/src/maxwell_navigation/launch/: maxwell_navigation.launch.py
ros_ws/src/maxwell_navigation/maxwell_navigation/: cmd_vel_bridge.py
ros_ws/src/maxwell_simulation/: SOLIDWORKS_TO_URDF.md
ros_ws/src/maxwell_simulation/config/: joint_names_Simplified Rover.SLDASM.yaml
ros_ws/src/maxwell_simulation/launch/: display.launch  gazebo.launch
ros_ws/src/maxwell_simulation/meshes/: Camera_Link.STL  base_link.STL
ros_ws/src/maxwell_simulation/urdf/: Simplified Rover.SLDASM.csv  Simplified Rover.SLDASM.urdf
ros_ws/src/rad_control/include/rad_control/: rad.hpp
ros_ws/src/rad_control/launch/: rad_status_main.launch.py
ros_ws/src/rad_control/src/: rad.cpp
