<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maxwell_localization</name>
  <version>1.0.0</version>
  <description>EKF localization stack for Maxwell rover with wheel odometry and IMU fusion</description>
  <maintainer email="nic.koenig37@gmail.com">Nick</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>custom_interfaces</depend>

  <exec_depend>maxwell_gazebo</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
